--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,14 +100,14 @@
 
         <div class="col-38">
 
-            <div class="section-heading" >
-                <h1>YOUR NEXT DEVELOPER</h1>
-                <h2>Bachelord Grade in Systems and more than ten years of experience in PeopleSoft ERP.
+            <div class="section-heading"  >
+                <h1 style="color:#000000;">YOUR NEXT DEVELOPER</h1>
+                <h2 style="color:#000000;">Bachelord Grade in Systems and more than ten years of experience in PeopleSoft ERP.
                   Passion for web development.</h2>
             </div>
 
             <!--Call to Action-->
-            <a href="#" class="button">CHANGE YOUR WEB TODAY</a>
+            <a href="#" class="button" style="color:#000000;">CHANGE YOUR WEB TODAY</a>
             <!--End Call to Action-->
 
         </div>
