--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,13 +20,13 @@
                       <!--End of Banner Logo-->
 
                       <!--The Logo that is shown on the sticky Navigation Bar-->
-                      <img src="assets/images/logo-2.png" id="navigation-logo" alt="Landing Page"/>
+                      <img src="assets/images/logo.png" id="navigation-logo" alt="Landing Page"/>
                       <!--End of Navigation Logo-->
 
                   </div>
                   <!--End of Logo-->
 
-                  <aside>
+                  <aside >
 
                       <!--Social Icons in Header-->
                       <ul class="social-icons">
@@ -107,7 +107,7 @@
             </div>
 
             <!--Call to Action-->
-            <a href="#" class="button" style="color:#000000;">CHANGE YOUR WEB TODAY</a>
+            <a href="#" class="button" >CHANGE YOUR WEB TODAY</a>
             <!--End Call to Action-->
 
         </div>
