--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
                       <!--End of Banner Logo-->
 
                       <!--The Logo that is shown on the sticky Navigation Bar-->
-                      <img src="assets/images/logo.png" id="navigation-logo" alt="Landing Page"/>
+                      <img src="assets/images/logo-2.png" id="navigation-logo" alt="Landing Page"/>
                       <!--End of Navigation Logo-->
 
                   </div>
